refactor: update Docker configuration for backend and database services

--- a/Dockerfile-db
+++ b/Dockerfile-db
@@ -1,5 +1,8 @@
-FROM postgres:18-alpine
+FROM postgres:18
 
-RUN apt-get update && apt-get  install -y postgresql-18-postgis-3
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+       postgresql-18-postgis-3 \
+    && rm -rf /var/lib/apt/lists/*
 
-CMD ["/usr/local/bin/docker-entrypoint.sh","postgres"]
+CMD ["docker-entrypoint.sh", "postgres"]
