--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,32 @@
 services:
-  db:
+  postgres:
     container_name: friendspark-db
     build:
-      context: friendspark-backend
-      dockerfile: friendspark-backend/Dockerfile-db
+      context: ./
+      dockerfile: Dockerfile-db
     restart: always
     environment:
-      POSTGRES_DB: friendspark
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - "5435:5432"
     volumes:
       - postgres_data:/var/lib/postgresql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+
+  friendspark-backend:
+    container_name: friendspark-backend
+    build:
+      context: ./friendspark-backend
+      dockerfile: Dockerfile
+    depends_on:
+      - postgres
+    environment:
+      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
+      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
+    ports:
+      - "8090:8090"
 volumes:
   postgres_data:
