feat: add user registration endpoint and geohash utility; update application configuration

--- a/friendspark-backend/src/main/resources/application.yaml
+++ b/friendspark-backend/src/main/resources/application.yaml
@@ -19,6 +19,8 @@ spring:
       mode: always
 server:
   port: 8090
+  servlet:
+    context-path: /api/v1
 
 logging:
   level:
@@ -29,4 +31,5 @@ logging:
           descriptor:
             sql: TRACE
       springframework:
-        security: INFO
+        security: TRACE
+        web: TRACE
