--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
-  postgres:
-    container_name: friendspark-db
+  friendspark-postgres:
+    container_name: friendspark-postgres
     build:
       context: ./
       dockerfile: Dockerfile-db
@@ -13,7 +13,7 @@ services:
       - "5435:5432"
     volumes:
       - postgres_data:/var/lib/postgresql
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+#      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
   friendspark-backend:
     container_name: friendspark-backend
@@ -21,7 +21,7 @@ services:
       context: ./friendspark-backend
       dockerfile: Dockerfile
     depends_on:
-      - postgres
+      - friendspark-postgres
     environment:
       SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
       SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
