refactor: update .gitignore to include Google services files and handle AGENTS.md variations

--- a/.gitignore
+++ b/.gitignore
@@ -71,7 +71,12 @@ DerivedData/
 *.db
 *.sqlite
 
+
+**/friendspark-kmp/composeApp/google-services.json
+**/friendspark-kmp/composeApp/GoogleService-Info.plist
+
 # --- Misc ---
+AGENTS.MD
 /AGENTS.MD
 /AGENTS.md
 **/AGENTS.MD
